# AIC19-Client-Cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  travis.sh
client/: CMakeLists.txt
client/src/: Main.cpp  Utility.h
client/src/AI/: AI.cpp  AI.h
client/src/Core/: Controller.cpp  Controller.h  EventQueue.cpp  EventQueue.h  ParseError.h  Utility.h
client/src/Core/Message/: AuthenticationMessage.h  CreateCastMessage.h  CreateMoveMessage.h  CreatePickMessage.h  CreateStormMessage.h  CreateTowerMessage.h  CreateUnitMessage.h  EndTurnMessage.h  EventMessage.cpp  EventMessage.h  InitMessage.cpp  InitMessage.h  Message.cpp  Message.h  ParseError.h  PickMessage.cpp  PickMessage.h  PlantBeanMessage.h  ShutdownMessage.h  TurnMessage.cpp  TurnMessage.h  UpgradeTowerMessage.h
client/src/Model/: Cell.cpp  Cell.h  Entity.cpp  Entity.h  GameEvent.cpp  GameEvent.h  Map.cpp  Map.h  Path.cpp  Path.h  Player.cpp  Player.h  Point.cpp  Point.h  Tower.cpp  Tower.h  Unit.cpp  Unit.h  World.cpp  World.h
client/src/Model/Interface/: Ability.cpp  Ability.h  AbilityConstants.cpp  AbilityConstants.h  CastAbility.cpp  CastAbility.h  Cell.cpp  Cell.h  Enumerations.cpp  Enumerations.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  Hero.cpp  Hero.h  HeroConstants.cpp  HeroConstants.h  Map.cpp  Map.h  World.cpp  World.h
client/src/Network/: FileDescriptor.cpp  FileDescriptor.h  Message.cpp  Message.h  Network.cpp  Network.h  NetworkError.h
client/src/Utility/: Logger.cpp  Logger.h  Utility.h
